<?php

declare(strict_types=1);

namespace App\CustomerBC\Domain\ValueObject;

use App\SharedKernel\Domain\ValueObject\UuidVO;
final class CustomerIdVO extends UuidVO {}
